# airi-press

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  railway.toml  vite.config.ts
.github/workflows/: deploy-frontend.yml  deploy-pages.yml  deploy.yml
posts/: 111.md
public/: config.json  music.json  settings.json  status-bar.json
public/admin/: config.yml
public/posts/: index.json  post-1764967637862.md  post-1764969098731.md  post-1764971049612.md  post-1765001578377.md
scripts/: generate-posts.ts  generate-wallpapers.ts
server/: .env.example  Cargo.toml  Dockerfile
server/migrations/: 20240101000000_initial.sql
server/src/: config.rs  db.rs  error.rs  errors.rs  frontmatter.rs  github.rs  main.rs  middleware.rs  models.rs  routes.rs  sync.rs
server/src/handlers/: auth.rs  categories.rs  comments.rs  health.rs  images.rs  mod.rs  posts.rs  tags.rs  users.rs
server/src/middleware/: auth.rs
server/src/models/: auth.rs  category.rs  comment.rs  image.rs  mod.rs  post.rs  tag.rs  user.rs
server/src/services/: auth.rs  category.rs  comment.rs  github.rs  image.rs  mod.rs  post.rs  tag.rs  user.rs
src/: App.vue  main.ts
src/assets/: main.css  markdown.css
src/composables/: useI18n.ts
src/locales/: translations.ts
src/router/: index.ts
src/stores/: desktop.ts  music.ts  system.ts
src/utils/: frontmatter.ts
src/views/: CalculatorView.vue  DesktopView.vue  MusicPlayerView.vue  PostDetailView.vue  (+3 more)
web/: .env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+39 files in other folders)
