[package]
name = "airi-press-server"
version = "0.1.0"
edition = "2021"
authors = ["AiriPress Team"]
description = "A production-ready blog system backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.43", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication - pin jsonwebtoken to avoid pulling in newer simple_asn1/time
jsonwebtoken = "=9.2.0"
argon2 = "0.5"
rand = "0.8"

# Date and time - pin to versions compatible with rustc 1.85
chrono = { version = "=0.4.38", features = ["serde"] }
time = "=0.3.36"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for GitHub API)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Base64 encoding
base64 = "0.21"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Pin transitive dependencies to rustc 1.85 compatible versions
home = "=0.5.9"
